--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
               <div class="name">
               <label for="name">Full Name</label>
-              <input type="text" required id="name" name="user-name">
+              <input type="text"  id="name" name="user-name">
             </div>
                 <div class="email">
               <label for="email">Email Address</label>
-              <input type="email" required id="email" name="user-email">
+              <input type="email"  id="email" name="user-email">
             </div>
                 <div class="phone">
               <label for="phone">Phone Number</label>
@@ -55,7 +55,6 @@
                 <div class="state">
                   <label for="state">State</label>
          <select id="state" name="user_state">
-
             <option value="Alabama">Alabama</option>
             <option value="Alaska">Alaska</option>
             <option value="Arizona">Arizona</option>
@@ -105,14 +104,12 @@
             <option value="West Virginia">West Virginia</option>
             <option value="Wisconsin">Wisconsin</option>
             <option value="Wyoming">Wyoming</option>
-</div>
 
 
             <div class="zip">
-            <label for="zip">Zip Code</label>
-            <input type="text" id="zip" name="user-zip">
-          </div>
-
+                        <label for="zip">Zip Code</label>
+                        <input type="text" id="zip" name="user-zip">
+            </div>
 
             </fieldset>
 
