--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 
               <div class="name">
               <label for="name">Full Name</label>
-              <input type="text"  id="name" name="user-name">
+              <textarea id="name" name="user-name" <p>Required</textarea>
+
+
             </div>
                 <div class="email">
-              <label for="email">Email Address</label>
-              <input type="email"  id="email" name="user-email">
+              <label for="name">Email Address</label>
+              <textarea id="name" name="user-name" <p>Required</textarea>
             </div>
                 <div class="phone">
               <label for="phone">Phone Number</label>
@@ -104,7 +106,8 @@
             <option value="West Virginia">West Virginia</option>
             <option value="Wisconsin">Wisconsin</option>
             <option value="Wyoming">Wyoming</option>
-
+          </select>
+          </div>
 
             <div class="zip">
                         <label for="zip">Zip Code</label>
