--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
               <div class="name">
               <label for="name">Full Name</label>
-              <textarea id="name" name="user-name" <p>Required</textarea>
+              <input type="text" id="name" name="user-name" placeholder="Required">
 
 
             </div>
                 <div class="email">
-              <label for="name">Email Address</label>
-              <textarea id="name" name="user-name" <p>Required</textarea>
+              <label for="email">Email Address</label>
+              <input type="email" id="email" name="user-name" placeholder="Required" >
             </div>
                 <div class="phone">
               <label for="phone">Phone Number</label>
