--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,700;1,300&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+
     <style>
       body {
-        font-family: 'Merriweather', serif;
-        font-size: 20px;
+        font-family: "Trirong", serif;
+        font-size: 15px;
       }
     </style>
     <title>THE CODE REVIEW</title>
@@ -22,9 +22,9 @@
 <h2>Get the latest on how your code is doing right now in your inbox</h2>
 </div>
 
-
           <form>
-
+            <hr class="thick">
+            <hr class="thick">
             <fieldset>
 <legend>Contact Information</legend>
 
@@ -112,7 +112,7 @@
             </div>
 
             </fieldset>
-
+<hr class="thin">
   <fieldset>
             <div class="newsletter">
               <legend>Newsletter</legend>
